@@ -5,7 +5,8 @@ Changelog
 2.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Use plone.app.testing instead of collective.testcaselayer.
+  [buchi]
 
 
 2.1 (2012-03-13)
